--- a/hello.html
+++ b/hello.html
@@ -4,13 +4,9 @@
       <title>Hello!</title>
   </head>
   <body>
-<<<<<<< HEAD
-      <h1>Welcome to my website!</h1>
-    <h2> Hello again!!</h2>
-=======
-      <h1 style="color:blue;">Welcome to my website</h1>
-    <h2> Hello again!</h2>
->>>>>>> cdaabc426ef7ebc83700d3a3f8570d3e5ea22f3f
+      <h1 style="color:blue;">Welcome to my website!</h1>
+      <h2> Hello again!</h2>
+
       Hello, World!
   </body>
 </html>
